--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-node_modules
+node_modules/
+.DS_Store
 .vscode
 dist
 coverage
@@ -6,3 +7,4 @@ coverage
 lerna-debug.log
 .yarn
 packages/**/tsconfig.tsbuildinfo
+
