--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "monorepo",
+  "name": "fusion",
   "version": "1.0.0",
-  "description": "A react nonorepo based on webpack and typescript.",
-  "main": "dist/index.js",
-  "types": "dist/types/index.d.ts",
-  "private": true,
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "prepare": "husky install",
-    "build": "lerna run build --stream",
-    "tscheck": "lerna run tscheck --stream",
-    "lint": "lerna run lint --stream --parallel",
-    "release": "lerna version --force-publish",
-    "publish": "lerna publish from-package --no-verify-access",
-    "test": "jest",
-    "example": "cd example && npm run start"
+    "test": "lerna run test",
+    "build": "lerna run build",
+    "build:dev": "lerna run build:dev",
+    "start": "npm run build:dev && lerna run start --scope @fusion/app",
+    "tscheck": "lerna run tscheck",
+    "lint": "lerna run lint",
+    "release": "lerna version --force-publish"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sep8/fusion.git"
   },
   "files": [
     "dist/",
@@ -21,56 +23,47 @@
     "CHANGELOG.md",
     "LICENSE"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sep9/monorepo.git"
-  },
   "author": "mike",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sep9/monorepo/issues"
+    "url": "https://github.com/sep8/fusion/issues"
   },
-  "homepage": "https://github.com/sep9/monorepo#readme",
+  "homepage": "https://github.com/sep8/fusion#readme",
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
+    "@commitlint/cli": "^17.5.0",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
-    "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.40",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "babel-loader": "^8.2.3",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.29",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "babel-loader": "^9.1.2",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.1",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "lerna": "^4.0.0",
-    "prettier": "2.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.4",
-    "typescript": "^4.6.2",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
-  },
-  "peerDependencies": {
-    "react": "v17.0.2"
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "lerna": "^6.6.1"
   },
   "workspaces": [
-    "packages/app",
-    "packages/components",
-    "packages/utils"
-  ]
+    "packages/*"
+  ],
+  "dependencies": {
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.7",
+    "rimraf": "^4.4.1",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1"
+  }
 }
