--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sep9/app",
+  "name": "@fusion/app",
   "version": "0.2.16",
   "description": "> TODO: description",
   "author": "mike",
@@ -7,6 +7,15 @@
   "license": "ISC",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "scripts": {
+    "clean": "rimraf dist && rimraf tsconfig.tsbuildinfo",
+    "build": "npm run clean && tsc --build && webpack --node-env=production",
+    "build:dev": "npm run clean && tsc --build && webpack --node-env=development",
+    "start": "cross-env SERVE=true webpack serve --node-env development --open --config=webpack.config.app.js",
+    "tscheck": "cross-env TSCHECK=true webpack --node-env=development",
+    "lint": "eslint src --ext .ts,.tsx,.js --fix",
+    "test": "jest"
+  },
   "files": [
     "dist/",
     "README.md",
@@ -26,13 +35,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-    "clean": "rimraf dist && rimraf tsconfig.tsbuildinfo",
-    "build": "npm run clean && tsc --build && webpack --node-env=production",
-    "tscheck": "cross-env TSCHECK=true webpack --node-env=development",
-    "lint": "eslint src --ext .ts,.tsx,.js --fix",
-    "test": "jest"
-  },
   "bugs": {
     "url": "https://github.com/sep9/monorepo/issues"
   },
@@ -41,14 +43,15 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.11.0",
     "fork-ts-checker-webpack-plugin": "^7.2.1",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "rimraf": "^3.0.2",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.13.1"
   },
   "dependencies": {
-    "@sep9/components": "^0.2.16",
-    "@sep9/utils": "^0.2.16"
-  },
-  "gitHead": "39422be887d72d592c7a485125b335e59a9a4e7e"
+    "@fusion/layout": "*",
+    "@fusion/utils": "*"
+  }
 }
