--- a/nx.json
+++ b/nx.json
@@ -4,7 +4,8 @@
       "runner": "nx/tasks-runners/default",
       "options": {
         "cacheableOperations": [
-          "build:dev"
+          "build:dev",
+          "test"
         ]
       }
     }
@@ -23,6 +24,11 @@
     "build:dev": {
       "dependsOn": [
         "^build:dev"
+      ]
+    },
+    "test": {
+      "dependsOn": [
+        "^test"
       ]
     }
   }
