--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "isolatedModules": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
   },
   "references": [
     {
